V100_results/results/rushlarsen/sycl.log
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -DUSE_GPU -DUSE_GPU -O3 -O3 -O3 -O3 -c main.cpp -o main.o
main.cpp:103:26: error: use of undeclared identifier 'sqrt'; did you mean 'sycl::sqrt'?
  103 |   printf("RMSE = %lf\n", sqrt(rmse / (total_num_states)));
      |                          ^~~~
      |                          sycl::sqrt
/home/ga27mex2/repos/llvm/build/bin/../include/sycl/detail/builtins/math_functions.inc:188:34: note: 'sycl::sqrt' declared here
  188 | BUILTIN_GENF_NATIVE_OPT(ONE_ARG, sqrt)
      |                                  ^
1 error generated.
make: *** [Makefile:71: main.o] Error 1
